# button_shifter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
release/button_shifter/: README.md  config01.shift
release/button_shifter/lin_x64/: button_shifter.xpl
release/button_shifter/mac_x64/: button_shifter.xpl
release/button_shifter/win_x64/: button_shifter.xpl
src/: Timer.cpp  Timer.h  plugin.cpp  plugin.h  state.cpp  state.h  utils.cpp  utils.h  xshifter.cpp  xshifter.h  xx_share_config.h
